# Cpp-Roto-Points-Matte

./: CMakeLists.txt  README.md
src/: Main.cpp  MatteProcessing.cpp  MatteProcessing.h
